# SakuraSuite

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  SakuraSuite.pro  Wiiking2Editor.pro
Main/: Main.pro
Main/include/: AboutDialog.hpp  ApplicationLog.hpp  Constants.hpp  MainWindow.hpp  OutputStreamMonitor.hpp  PluginsDialog.hpp  PluginsManager.hpp  PreferencesDialog.hpp  WiiKeyManager.hpp
Main/resources/: mainicon.rc  resources.qrc
Main/src/: AboutDialog.cpp  ApplicationLog.cpp  MainWindow.cpp  OutputStreamMonitor.cpp  PluginsDialog.cpp  PluginsManager.cpp  PreferencesDialog.cpp  WiiKeyManager.cpp  main.cpp
Main/ui/: AboutDialog.ui  ApplicationLog.ui  MainWindow.ui  PluginsDialog.ui  PreferencesDialog.ui
OoTSavePlugin/: OoTSavePlugin.cpp  OoTSavePlugin.hpp  OoTSavePlugin.pro  ootsaveplugin.json  ootsaveplugin_global.hpp
OoTSavePlugin/resources/: resources.qrc
PluginFramework/: PluginFramework.pro
PluginFramework/include/: DocumentBase.hpp  GameDocument.hpp  GameFile.hpp  MainWindowBase.hpp  PluginInterface.hpp  PluginSettingsDialog.hpp  WiiKeyManagerBase.hpp
PluginFramework/src/: DocumentBase.cpp  GameDocument.cpp  GameFile.cpp  (+1 more)
SkywardSwordPlugin/: SkywardSwordEditorForm.cpp  SkywardSwordEditorForm.hpp  SkywardSwordEditorForm.ui  SkywardSwordGameFile.cpp  SkywardSwordGameFile.hpp  SkywardSwordPlugin.cpp  SkywardSwordPlugin.hpp  SkywardSwordPlugin.pro  readme.md  skywardswordplugin.json  skywardswordplugin_global.hpp
SpriteEditorPlugin/: SpriteCanvas.cpp  SpriteEditorPlugin.pro  spriteeditor.json
Updater/: Updater.pro
(+64 files in other folders)
